# wMath

./: .eslintrc.yml  .ex.will.yml  .gitpod.yml  .im.will.yml  .travis.yml  Cargo.toml  LICENSE  Makefile  README.md  Readme.md  package.json  rustfmt.toml  was.package.json  will.yml
.github/workflows/: AppropriateBranchBeta.yml  AutoMergeToBeta.yml  AutoPrToAlpha.yml  AutoPrToBeta.yml  AutoPrToMaster.yml  MathAdapterPush.yml  ModuleMathAdapterPush.yml  ModulewMathPush.yml  NpmJsPublish.yml  RustFast.yml  RustFull.yml  RustPullRequest.yml  RustPush.yml  RustPushCommon.yml  StandardJsPublish.yml  StandardJsPullRequest.yml  StandardJsPush.yml  StandardRustPullRequest.yml  StandardRustPush.yml  StatusChecksRulesUpdate.yml  WMathPush.yml  wMathPush.yml
module/js/wMath/: package.json  was.package.json
module/rust/_skatch/: Cargo.toml  Readme.md
module/rust/_skatch/rust/impl/math/: basic.rs  lib.rs  wskatch_lib.rs
module/rust/_skatch/rust/test/math/: wmath_test.rs  wskatch_test.rs
module/rust/_skatch/sample/rust/wmath_trivial/: Cargo.toml
module/rust/math_ adapter/: Cargo.toml
module/rust/math_ adapter/rust/impl/math/: basic.rs  vector.rs
module/rust/math_ adapter/rust/test/math/: x2_test.rs
module/rust/math_adapter/: Cargo.toml  Readme.md
module/rust/math_adapter/rust/impl/math/: abs.rs  as_foreign.rs  as_native.rs  from.rs  interfaces.rs  lib.rs  macro_helper.rs  macro_tools.rs  macroses.rs  math_adapter_build.rs  math_adapter_lib.rs  plugin.rs  scalar.rs  vector.rs
module/rust/math_adapter/rust/impl/math/abs/: as_foreign.rs  from.rs  mod.rs  nan_like.rs  x2_interface.rs  x3_interface.rs
module/rust/math_adapter/rust/impl/math/as_foreign/: as_foreign.rs
module/rust/math_adapter/rust/impl/math/from/: from.rs
module/rust/math_adapter/rust/impl/math/interfaces/: interfaces.rs
module/rust/math_adapter/rust/impl/math/meta/: for_each.rs  mod.rs
module/rust/math_adapter/rust/impl/math/plugin/: cgmath.rs  cgmath_x2.rs  winit.rs  winit_x2.rs
module/rust/math_adapter/rust/impl/math/plugin/cgmath/: as_cgmath.rs  as_foreign.rs  as_native.rs  mod.rs  ops.rs  x2.rs
module/rust/math_adapter/rust/impl/math/plugin/nalgebra/: as_foreign.rs  as_nalgebra.rs  as_native.rs  mod.rs  ops.rs  x2.rs
module/rust/math_adapter/rust/impl/math/plugin/winit/: mod.rs  x2.rs
module/rust/math_adapter/rust/impl/math/scalar/: scalar.rs
module/rust/math_adapter/rust/impl/math/vector/: x2.rs  x2_interface.rs  x2_ops.rs  x2_struct.rs
module/rust/math_adapter/rust/impl/math/vector/x2/: array.rs  impl_deref.rs  impl_rented_op.rs  interface.rs  mod.rs  ops.rs  rented_op.rs  slice.rs  struct.rs  structure.rs  tuple.rs
module/rust/math_adapter/rust/test/math/: canonical_x2_test.rs  cgmath_test.rs  experiment_test.rs  helper_test.rs  macro_foreign_x2.rs  macro_test_x2_with_records.rs  macro_tools_test.rs  macro_x2.rs  math_adapter_lib_test.rs  math_adapter_tests.rs  test_tools.rs  tools.rs  winit_test.rs  wmath_test.rs  x2_test.rs  x2_with_records.rs
module/rust/math_adapter/rust/test/math/cgmath_test/: as_test.rs  mod.rs  ops_test.rs  x2_test.rs
module/rust/math_adapter/rust/test/math/nalgebra_test/: as_test.rs  mod.rs  ops_test.rs  x2_test.rs
module/rust/math_adapter/rust/test/math/winit_test/: x2_test.rs
module/rust/math_adapter/sample/rust/math_adapter_trivial/: Cargo.toml
module/rust/math_adapter/sample/rust/math_adapter_trivial/src/: main.rs
module/rust/math_adapter/sample/rust/wmath_trivial/src/: main.rs
module/rust/math_common/: Cargo.toml  Readme.md
module/rust/math_common/rust/impl/math/: from.rs  math_common_build.rs
module/rust/tools/: Cargo.toml  Readme.md
module/rust/tools/rust/impl/: lib.rs  tools_lib.rs
module/rust/wmath/: Cargo.toml  Readme.md  sample
module/rust/wmath/rust/impl/math/: basic.rs  lib.rs  wmath_lib.rs
module/rust/wmath/rust/impl/math/vector/: x2.rs
module/rust/wmath/rust/test/math/: wmath_lib_test.rs  wmath_test.rs
module/rust/wmath/sample/rust/wmath_trivial/src/: main.rs
proto/dwtools/amath/l9/: Include.s
proto/dwtools/amath/l9.test/: Math.test.s
proto/wtools/amath/l9/: Include.s
proto/wtools/amath/l9.test/: Math.test.s
rust/impl/math/: abs.rs  scalar.rs  vector.rs  wmath_lib.rs
rust/impl/math/abs/: from.rs  x2_interface.rs
rust/impl/math/adapter/: abs.rs  math_adapter_build.rs  math_adapter_lib.rs  meta.rs  scalar.rs  vector.rs
rust/impl/math/adapter/abs/: from.rs  x2_interface.rs  x3_interface.rs  x4_interface.rs
rust/impl/math/adapter/plugin/cgmath/: mod.rs  ops.rs  x3.rs  x4.rs
rust/impl/math/adapter/plugin/nalgebra/: mod.rs  ops.rs  x3.rs  x4.rs
rust/impl/math/adapter/vector/: impl_interfaces.rs
rust/impl/math/adapter/vector_interfaces/: mod.rs
rust/impl/math/common/: math_common_lib.rs
rust/impl/math/meta/: for_each.rs
rust/impl/math/vector/x2/: array.rs  mod.rs  tuple.rs
rust/test/_integration_test/: smoke_test.rs
rust/test/math/: math_adapter_tests.rs  math_common_tests.rs  winit_test.rs
rust/test/math/adapter/: canonical_x3_test.rs  canonical_x4_test.rs  derive_vector_interfaces_test.rs  impl_interfaces_macro_test.rs  macro_foreign_x2.rs  macro_foreign_x3.rs  macro_foreign_x4.rs  macro_tools_test.rs
rust/test/math/adapter/cgmath_test/: mod.rs  ops_test.rs  x2_test.rs  x3_test.rs  x4_test.rs
rust/test/math/adapter/nalgebra_test/: mod.rs  ops_test.rs  x2_test.rs  x3_test.rs  x4_test.rs
rust/test/math/adapter/winit_test/: x2_test.rs
rust/test/math/cgmath_test/: mod.rs
sample/: Sample.js  Sample.s
sample/rust/math_adapter_interoperability_sample/: Cargo.toml
sample/rust/math_adapter_interoperability_sample/src/: main.rs
sample/rust/math_adapter_operators_sample/: Cargo.toml
sample/rust/math_adapter_operators_sample/src/: main.rs
sample/rust/math_adapter_trivial_sample/: Cargo.toml
sample/rust/math_adapter_trivial_sample/src/: main.rs
sample/rust/wmath_trivial/: Cargo.toml
sample/rust/wmath_trivial/src/: main.rs
sample/rust/wmath_trivial_sample/: Cargo.toml
sample/rust/wmath_trivial_sample/src/: main.rs
sample/trivial/: Sample.html  Sample.s
(+21 files in other folders)
