[package]
name = "wskatch"
version = "0.1.0"
edition = "2021"
authors = [
  "Kostiantyn Wandalen <wandalen@obox.systems>",
  "Volodymyr M. <volodymyr.migdal@gmail.com>",
  "Dmytro Kryvoruchko <dm.vict.kr@gmail.com>",
]
license = "MIT"
readme = "Readme.md"
documentation = "https://docs.rs/wskatch"
repository = "https://github.com/Wandalen/wTools/tree/master/module/rust/wskatch"
homepage = "https://github.com/Wandalen/wTools/tree/master/module/rust/wskatch"
description = """
___.
"""
categories = [ "algorithms", "development-tools" ]
keywords = [ "fundamental", "general-purpose", "testing" ]

include = [
  "/rust/impl/math",
  "/Cargo.toml",
  "/Readme.md",
  "/License",
]

[lib]
name = "wskatch"
path = "rust/impl/math/lib.rs"

[[test]]
name = "wskatch_test"
path = "rust/test/math/wmath_test.rs"

# [[example]]
# name = "wskatch_trivial"
# path = "sample/rust/wskatch_trivial/src/main.rs"

[dependencies]
# paste = "~1.0"
# anyhow = "~1.0"
wtest_basic = "~0.1"

[dev-dependencies]
# trybuild = { version = "~1.0", features = [ "diff" ] }
