[package]
name = "wmath"
version = "0.1.0"
edition = "2021"
authors = [
  "Kostiantyn Wandalen <wandalen@obox.systems>",
  "Volodymyr M. <volodymyr.migdal@gmail.com>",
  "Dmytro Kryvoruchko <dm.vict.kr@gmail.com>",
]
license = "MIT"
readme = "Readme.md"
documentation = "https://docs.rs/wmath"
repository = "https://github.com/Wandalen/wTools/tree/master/module/rust/wmath"
homepage = "https://github.com/Wandalen/wTools/tree/master/module/rust/wmath"
description = """
Tools for writing and running tests.
"""
categories = [ "algorithms", "development-tools" ]
keywords = [ "fundamental", "general-purpose", "testing" ]

include = [
  "/rust/impl/math",
  "/Cargo.toml",
  "/Readme.md",
  "/License",
]

[package.metadata.docs.rs]
all-features = true

[lib]
name = "wmath"
path = "rust/impl/math/lib.rs"

[[test]]
name = "wmath_test"
path = "rust/test/math/wmath_test.rs"

[[example]]
name = "wmath_trivial"
path = "sample/rust/wmath_trivial/src/main.rs"

[features]
# cgmath = [ "cgmath" ]
# winit = [ "winit" ]
default = [ "cgmath", "nalgebra", "winit" ]

[dependencies]
cgmath = { version = "~0.18", optional = true }
nalgebra = { version = "~0.30", optional = true }
winit = { version = "~0.26", optional = true }
num-traits = "~0.2"
# paste = "~1.0"
# anyhow = "~1.0"

[dev-dependencies]
wtest_basic = { version = "~0.1" }
# paste = "1.0.5"
# trybuild = { version = "~1.0", features = [ "diff" ] }
