[package]
name = "math_adapter"
version = "0.3.1"
edition = "2021"
authors = [
  "Kostiantyn Wandalen <wandalen@obox.systems>",
  "Volodymyr M. <volodymyr.migdal@gmail.com>",
  "Dmytro Kryvoruchko <dm.vict.kr@gmail.com>",
]
license = "MIT"
readme = "Readme.md"
documentation = "https://docs.rs/wmath"
repository = "https://github.com/Wandalen/wMath/tree/master/module/rust/wmath"
homepage = "https://github.com/Wandalen/wMath/tree/master/module/rust/wmath"
description = """
Collection of math adapters to decouple your application from math libraries' implementations and to provide both inter-libraries compatibility and affordable exchangeability.
"""
categories = [ "algorithms", "development-tools" ]
keywords = [ "fundamental", "general-purpose", "testing" ]

include = [
  "/rust/impl/math",
  "/Cargo.toml",
  "/Readme.md",
  "/License",
]

[lib]
name = "math_adapter"
path = "rust/impl/math/math_adapter_lib.rs"

[[test]]
name = "math_adapter_test"
path = "rust/test/math/math_adapter_lib_test.rs"

[[example]]
name = "math_adapter_trivial_sample"
path = "../../../sample/rust/math_adapter_trivial_sample/src/main.rs"

[[example]]
name = "math_adapter_operators_sample"
path = "../../../sample/rust/math_adapter_operators_sample/src/main.rs"

[[example]]
name = "math_adapter_interoperability_sample"
path = "../../../sample/rust/math_adapter_interoperability_sample/src/main.rs"

[package.metadata.docs.rs]
all-features = true

[features]
default_ops = [] # reuse operands and function of default math library
cgmath_ops = [ "cgmath" ] # reuse operands and function of `cgmath` as math library
nalgebra_ops = [ "nalgebra" ] # reuse operands and function of `nalgebra` as math library
default = [] # default features

[dependencies]
cgmath = { version = "~0", optional = true }
nalgebra = { version = "~0", optional = true }
winit = { version = "~0", optional = true }
num-traits = "~0.2"
# paste = "~1.0"
# anyhow = "~1.0"

[dev-dependencies]
tools = { path = "../../rust/tools" }
wtest_basic = { version = "~0.1" }
# paste = "1.0.5"
# trybuild = { version = "~1.0", features = [ "diff" ] }
