[package]
name = "math_common"
version = "0.3.1"
edition = "2021"
publish = false
authors = [
  "Kostiantyn Wandalen <wandalen@obox.systems>",
  "Dmytro Kryvoruchko <dm.vict.kr@gmail.com>",
]
license = "MIT"
readme = "Readme.md"
documentation = "https://docs.rs/wmath"
repository = "https://github.com/Wandalen/wMath/tree/master/module/rust/wmath"
homepage = "https://github.com/Wandalen/wMath/tree/master/module/rust/wmath"
description = """
A math module for experimenting.
"""
categories = [ "algorithms", "development-tools" ]
keywords = [ "fundamental", "general-purpose", "testing" ]
build = "rust/impl/math/common/math_common_build.rs"

[package.metadata.docs.rs]
all-features = true

include = [
  "/rust/impl/math",
  "/Cargo.toml",
  "/Readme.md",
  "/License",
]

[features]
default = [ "use_std" ]
full = [ "use_std", "use_alloc" ]
use_std = []
use_alloc = []

[lib]
name = "math_common"
path = "rust/impl/math/common/math_common_lib.rs"

[[test]]
name = "math_common_tests"
path = "rust/test/math/math_common_tests.rs"

[build-dependencies]
cfg_aliases = "~0.1"

[dependencies]
# num-traits = "~0.2"
# mem_tools = "~0.1"
meta_tools = "~0.2"

[dev-dependencies]
test_tools = { version = "~0.1" }
