[package]
name = "wmath"
version = "0.2.0"
edition = "2021"
authors = [
  "Kostiantyn Wandalen <wandalen@obox.systems>",
  "Volodymyr M. <volodymyr.migdal@gmail.com>",
  "Dmytro Kryvoruchko <dm.vict.kr@gmail.com>",
]
license = "MIT"
readme = "Readme.md"
documentation = "https://docs.rs/wmath"
repository = "https://github.com/Wandalen/wMath/tree/master/module/rust/wmath"
homepage = "https://github.com/Wandalen/wMath/tree/master/module/rust/wmath"
description = """
Math library aggregating several math modules.
"""
categories = [ "algorithms", "development-tools" ]
keywords = [ "fundamental", "general-purpose", "testing" ]

include = [
  "/rust/impl/math",
  "/Cargo.toml",
  "/Readme.md",
  "/License",
]

[package.metadata.docs.rs]
all-features = true

[lib]
name = "wmath"
path = "rust/impl/math/lib.rs"

[[test]]
name = "wmath_test"
path = "rust/test/math/wmath_lib_test.rs"

[[example]]
name = "wmath_trivial_sample"
path = "sample/rust/wmath_trivial_sample/src/main.rs"

[features]
cgmath = [ "math_adapter/cgmath" ] # use `cgmath` as math library
nalgebra = [ "math_adapter/nalgebra" ] # use `nalgebra` as math library
winit = [ "math_adapter/winit" ] # implement interfaces for vectors of `winit`
default_ops = [ "math_adapter/default_ops" ] # reuse operands and function of default math library
cgmath_ops = [ "cgmath", "math_adapter/cgmath_ops" ] # reuse operands and function of `cgmath` as math library
nalgebra_ops = [ "nalgebra", "math_adapter/nalgebra_ops" ] # reuse operands and function of `nalgebra` as math library
default = [] # default features

[dependencies]
math_adapter = { version = "~0.2", path = "../../rust/math_adapter" }
# cgmath = { version = "~0.18", optional = true }
# nalgebra = { version = "~0.30", optional = true }
# winit = { version = "~0.26", optional = true }
# num-traits = "~0.2"
# paste = "~1.0"
# anyhow = "~1.0"

[dev-dependencies]
wtest_basic = { version = "~0.1" }
# paste = "1.0.5"
# trybuild = { version = "~1.0", features = [ "diff" ] }
