[package]
name = "wmath"
version = "0.3.8"
edition = "2021"
authors = [
  "Kostiantyn Wandalen <wandalen@obox.systems>",
  "Volodymyr M. <volodymyr.migdal@gmail.com>",
  "Dmytro Kryvoruchko <dm.vict.kr@gmail.com>",
]
license = "MIT"
readme = "Readme.md"
documentation = "https://docs.rs/wmath"
repository = "https://github.com/Wandalen/wMath/tree/master/module/rust/wmath"
homepage = "https://github.com/Wandalen/wMath/tree/master/module/rust/wmath"
description = """
Math library aggregating several math modules.
"""
categories = [ "algorithms", "development-tools" ]
keywords = [ "fundamental", "general-purpose", "testing" ]

[package.metadata.docs.rs]
all-features = true

include = [
  "/rust/impl/math",
  "/Cargo.toml",
  "/Readme.md",
  "/License",
]

[features]
default = [ "use_std" ]
full = [ "use_std", "use_alloc" ]
use_std = []
use_alloc = []

cgmath = [ "math_adapter/cgmath" ] # use `cgmath` as math library
nalgebra = [ "math_adapter/nalgebra" ] # use `nalgebra` as math library
winit = [ "math_adapter/winit" ] # implement interfaces for vectors of `winit`
default_ops = [ "math_adapter/default_ops" ] # reuse operands and function of default math library
cgmath_ops = [ "cgmath", "math_adapter/cgmath_ops" ] # reuse operands and function of `cgmath` as math library
nalgebra_ops = [ "nalgebra", "math_adapter/nalgebra_ops" ] # reuse operands and function of `nalgebra` as math library

[lib]
name = "wmath"
path = "rust/impl/math/wmath_lib.rs"

[[test]]
name = "wmath_test"
path = "rust/test/math/wmath_lib_tests.rs"

[[test]]
name = "wmath_smoke_test"
path = "rust/test/_integration_test/smoke_test.rs"

[[example]]
name = "wmath_trivial_sample"
path = "../../../sample/rust/wmath_trivial_sample/src/main.rs"

[dependencies]
math_adapter = { version = "~0.3", path = "../../rust/math_adapter" }
meta_tools = "~0.2"

[dev-dependencies]
test_tools = { version = "~0.1" }
