[package]
name = "math_adapter_operators_sample"
version = "0.0.0"
edition = "2021"
publish = false

[features]
use_std = [ "math_adapter/use_std"]
cgmath = [ "use_std", "math_adapter/cgmath" ] # use `cgmath` as math library
nalgebra = [ "use_std", "math_adapter/nalgebra" ] # use `nalgebra` as math library
winit = [ "use_std", "math_adapter/winit" ] # implement interfaces for vectors of `winit`
default_ops = [ "math_adapter/default_ops" ] # reuse operands and function of default math library
cgmath_ops = [ "use_std", "cgmath", "math_adapter/cgmath_ops" ] # reuse operands and function of `cgmath` as math library
nalgebra_ops = [ "use_std", "nalgebra", "math_adapter/nalgebra_ops" ] # reuse operands and function of `nalgebra` as math library
default = [ "use_std", "cgmath_ops" ] # default features

[dependencies]
math_adapter = { version = "*", path = "../../../module/rust/math_adapter" }
